# members-reader

./: .gitignore  CLAUDE.md  members.csv
members-reader/: README.md  pyproject.toml  read_members.py
members-reader/members_reader/: __init__.py  reader.py
members-reader/tests/: test_reader.py
members_reader/: __main__.py
metar-reader/: app.py
